--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,48 @@
-/* You can add global styles to this file, and also import other style files */
+@import "variables"
+@import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap')
+
+*
+  margin: 0
+  padding: 0
+  box-sizing: border-box
+  font-size: calc(10/16)*16px
+
+
+body
+  background-color: $mainColor
+  font-family: "suse", sans-serif
+  font-weight: 300
+  min-height: 100vh
+  position: relative
+
+body::before
+  content: ""
+  position: absolute
+  width: 100%
+  height: 100%
+  background-image: url('../public/image/potworki.png')
+  background-repeat: no-repeat
+  background-position: center center
+  background-size: cover
+  background-attachment: fixed
+  opacity: .2
+  z-index: -1
+
+
+.darkView
+  color: $textColor
+  min-height: 1000vh
+
+.wrapperSite
+  max-width: $desctopMain
+  display: grid
+  grid-template-columns: .5fr repeat(10,1fr) .5fr
+  margin: 0 auto
+
+.wrapperElements
+  grid-column: 2 / -2
+
+
+
+
+
