--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -6,7 +6,8 @@ $secondColor: #BFDD06
 $secondColor-dark: #ADC806
 $textColor: #EFEFEF
 $thirdColor: #D9D9D9
-
+//$secondColor: #ff9700
+//$secondColor-dark: #ac6600
 
 //size
 
