--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -3,7 +3,7 @@
 $mainColor: #414141
 $mainColor-dark: #353535
 $secondColor: #BFDD06
-$secondColor-dark: #ADC806
+$secondColor-dark: #9fb804
 $textColor: #EFEFEF
 $thirdColor: #D9D9D9
 //$secondColor: #ff9700
