create offset in section when user scroll use navigation

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="wrapperAboutUs">
+<div class="wrapperAboutUs" id="about">
   <div class="elementsAboutUs">
     @for (items of information; track items.name) {
       <div
