--- a/src/app/navigation/navigation.component.sass
+++ b/src/app/navigation/navigation.component.sass
@@ -46,6 +46,7 @@
       font-size: 2rem
       padding: 0 1rem
       color: $mainColor
+      cursor: pointer
 
       &:active, &:hover
         font-weight: 600
