--- a/src/app/components/specialties/specialties.component.html
+++ b/src/app/components/specialties/specialties.component.html
@@ -4,18 +4,5 @@
     [activeElement]="activeElement"
     [dataNavigation]="navigationSpecialties"
   />
-  <div class="contentWrapper">
-    <div class="contentElement">
-      <p class="contentDescription">
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book. It has survived not only five
-        centuries, but also the make a type specimen book. It has survived not
-        only five centuries, but also the make a type specimen book. It has
-        survived not only five centuries, but also the
-      </p>
-      <div class="contentPhoto"></div>
-    </div>
-  </div>
+  <app-spec-content [data]="contentSpecjalist" />
 </div>
