--- a/src/app/elements/spec-content/spec-content.component.html
+++ b/src/app/elements/spec-content/spec-content.component.html
@@ -14,4 +14,8 @@
       </div>
     </div>
   }
+  <app-button-action
+    [actionButton]="'#Portfolio'"
+    [actionButtonText]="'Sprawdź'"
+  />
 </div>
