--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -22,3 +22,8 @@ $desctopMain: 1440px
 
 //margin between section
 $marginSection: 8rem
+
+
+//scale
+$scaleBackground: 4
+$scaleContent: $scaleBackground / ($scaleBackground * $scaleBackground)
