--- a/src/app/components/trust-us/trust-us.component.sass
+++ b/src/app/components/trust-us/trust-us.component.sass
@@ -8,14 +8,15 @@
   flex-direction: column
   //justify-content: center
   align-items: center
-  transform: scaleX(2)
+  transform: scaleX($scaleBackground)
 
 
   & > p
-    font-size: 2rem
+    font-size: 2.5rem
     text-transform: uppercase
     font-weight: 500
     letter-spacing: 2px
     padding: 2rem 0
-    transform: scaleX(.5)
+    transform: scaleX($scaleContent)
+    color: lighten($mainColor,50)
 
