--- a/src/styles.sass
+++ b/src/styles.sass
@@ -19,7 +19,7 @@ body
 body::before
   content: ""
   position: absolute
-  width: 100%
+  width: 100vw
   height: 100%
   background-image: url('../public/image/potworki.png')
   background-repeat: no-repeat
@@ -32,7 +32,7 @@ body::before
 
 .darkView
   color: $textColor
-  min-height: 1000vh
+  //min-height: 1000vh
 
 .wrapperSite
   max-width: $desctopMain
