--- a/src/styles.sass
+++ b/src/styles.sass
@@ -19,12 +19,12 @@ body
 body::before
   content: ""
   position: absolute
-  width: 100vw
+  width: 100%
   height: 100%
   background-image: url('../public/image/potworki.png')
-  background-repeat: no-repeat
-  background-position: center center
-  background-size: cover
+  background-repeat: repeat
+  background-position: center
+  background-size: 100%
   background-attachment: fixed
   opacity: .2
   z-index: -1
@@ -32,7 +32,6 @@ body::before
 
 .darkView
   color: $textColor
-  //min-height: 1000vh
 
 .wrapperSite
   max-width: $desctopMain
