update view horizontal, refresh scale in trust us component

--- a/src/app/elements/trust-us-content/trust-us-content.component.sass
+++ b/src/app/elements/trust-us-content/trust-us-content.component.sass
@@ -11,7 +11,7 @@ $sizeChoseComment: 1.3rem
   gap: calc($iconSize * 2)
   padding: 3rem 0
   justify-content: center
-  transform: scaleX($scaleContent)
+  //transform: scaleX($scaleContent)
 
 
 .descriptionTrusUs
@@ -20,7 +20,7 @@ $sizeChoseComment: 1.3rem
   margin: 0 auto
   grid-template-columns: .3fr auto
   padding: 3rem 0
-  transform: scaleX($scaleContent)
+  //transform: scaleX($scaleContent)
   gap: 2rem
 
 
@@ -48,15 +48,15 @@ $sizeChoseComment: 1.3rem
 
   &:hover
     color: $secondColor
-    transform: scale($iconHoverScale)
+    //transform: scale($iconHoverScale)
 
 .bigIcon
-  transform: scale($iconBigScale)
+  //transform: scale($iconBigScale)
 
 
   &:hover
     color: $secondColor
-    transform: scale($iconBigScale * $iconHoverScale)
+    //transform: scale($iconBigScale * $iconHoverScale)
 
 
 .activeTrust
@@ -64,15 +64,15 @@ $sizeChoseComment: 1.3rem
 
 
 .wrapperButton
-  transform: scaleX($scaleContent)
+  //transform: scaleX($scaleContent)
   width: 100%
   display: flex
   justify-content: end
-  padding: 2rem 0
+  padding: 2rem  5rem
 
 
 .sizeComments
-  transform: scaleX($scaleContent)
+  //transform: scaleX($scaleContent)
   width: 100%
   display: flex
   justify-content: center
