--- a/src/app/components/trust-us/trust-us.component.sass
+++ b/src/app/components/trust-us/trust-us.component.sass
@@ -8,7 +8,7 @@
   flex-direction: column
   //justify-content: center
   align-items: center
-  transform: scaleX($scaleBackground)
+  //transform: scaleX($scaleBackground)
 
 
   & > p
@@ -17,6 +17,6 @@
     font-weight: 500
     letter-spacing: 2px
     padding: 2rem 0
-    transform: scaleX($scaleContent)
+    //transform: scaleX($scaleContent)
     color: lighten($mainColor,50)
 
