refresh backround monser v2

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -27,7 +27,7 @@ body::before
   background-image: url('../public/image/potworki.png')
   background-repeat: repeat
   background-position: center
-  background-size: 110%
+  background-size: cover
   background-attachment: fixed
   opacity: .2
   z-index: -1
