disable backround-image monster when size is small after 1000px

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -32,6 +32,10 @@ body::before
   opacity: .2
   z-index: -1
 
+  @media(max-width: 1000px)
+    background-image: none  
+
+
 
 .darkView
   color: $textColor
