--- a/src/app/components/specialties/specialties.component.html
+++ b/src/app/components/specialties/specialties.component.html
@@ -2,7 +2,7 @@
   <app-navigation
     (nameElement)="changeElement($event)"
     [activeElement]="activeElement"
-    [dataNavigation]="navigationSpecialties"
+    [dataNavigation]="listEement"
   />
-  <app-spec-content [data]="contentSpecjalist" />
+  <app-spec-content [data]="contentSpecjalist" [imgURL]="imgAPI" />
 </div>
