--- a/src/app/components/trust-us/trust-us.component.sass
+++ b/src/app/components/trust-us/trust-us.component.sass
@@ -6,7 +6,7 @@
   background-color: $mainColor-dark
   display: flex
   flex-direction: column
-  //justify-content: center
+  justify-content: center
   align-items: center
   //transform: scaleX($scaleBackground)
 
