--- a/src/app/elements/trust-us-content/trust-us-content.component.sass
+++ b/src/app/elements/trust-us-content/trust-us-content.component.sass
@@ -8,17 +8,29 @@ $sizeChoseComment: 1.3rem
 
 .logoTrustUs
   display: flex
-  gap: calc($iconSize * 2)
   padding: 3rem 0
   justify-content: center
   //transform: scaleX($scaleContent)
+  width: 60%
+  position: relative
+  align-items: center
+  margin: 0 auto
+  overflow: hidden
+
+.elementLogo
+  margin: 0 calc($iconSize * 2)
+  width: 100%
+  display: flex
+  justify-content: center
+  gap: calc($iconSize * 2)
+
 
 
 .descriptionTrusUs
-  width: 80%
+  width: 60%
   display: grid
   margin: 0 auto
-  grid-template-columns: .3fr auto
+  grid-template-columns: 1fr
   padding: 3rem 0
   //transform: scaleX($scaleContent)
   gap: 2rem
@@ -39,6 +51,9 @@ $sizeChoseComment: 1.3rem
 
 
 
+
+
+
 .IconTrust
   font-size: $iconSize
   color: lighten($mainColor, 20)
@@ -46,17 +61,20 @@ $sizeChoseComment: 1.3rem
   cursor: pointer
 
 
+
   &:hover
     color: $secondColor
-    //transform: scale($iconHoverScale)
+    transform: scale($iconHoverScale)
 
 .bigIcon
-  //transform: scale($iconBigScale)
+  transform: scale($iconBigScale)
 
 
   &:hover
     color: $secondColor
-    //transform: scale($iconBigScale * $iconHoverScale)
+    transform: scale($iconBigScale * $iconHoverScale)
+
+
 
 
 .activeTrust
@@ -84,6 +102,7 @@ $sizeChoseComment: 1.3rem
   height: $sizeChoseComment
   background-color:  lighten($mainColor,15)
   border-radius: 50%
+
   cursor: pointer
 
 .activeNumberComment
