update trust us section to fetch data from backend. I dont have slider icon, more comments and one icon this is must create

--- a/src/app/components/trust-us/trust-us.component.html
+++ b/src/app/components/trust-us/trust-us.component.html
@@ -1,6 +1,6 @@
 <div class="wrapperTrust">
   <p>Zaufali nam</p>
   <div class="trustContents" id="trust-us">
-    <app-trust-us-content [dataComent]="dataComents" />
+    <app-trust-us-content [adresURL]="urlAddres" [dataComent]="dataComents" />
   </div>
 </div>
