--- a/src/app/components/trust-us/trust-us.component.sass
+++ b/src/app/components/trust-us/trust-us.component.sass
@@ -1,14 +1,15 @@
 @import "variables"
 
 .wrapperTrust
-  margin: $marginSection
+  margin: $marginSection auto
+  width: 100%
   min-height: 40rem
   background-color: $mainColor-dark
   display: flex
   flex-direction: column
   justify-content: center
   align-items: center
-  //transform: scaleX($scaleBackground)
+
 
 
   & > p
@@ -17,6 +18,8 @@
     font-weight: 500
     letter-spacing: 2px
     padding: 2rem 0
-    //transform: scaleX($scaleContent)
     color: lighten($mainColor,50)
 
+
+.trustContents
+  width: 100%
