--- a/src/styles.sass
+++ b/src/styles.sass
@@ -33,7 +33,7 @@ body::before
   z-index: -1
 
   @media(max-width: 1000px)
-    background-image: none  
+    background-image: none
 
 
 
@@ -78,5 +78,9 @@ body::before
 .offsetSection
   height: 3rem
 
+
+.errorMessage
+  font-size: 2rem
+  text-align: center
 
 
