--- a/src/app/elements/trust-us-content/trust-us-content.component.sass
+++ b/src/app/elements/trust-us-content/trust-us-content.component.sass
@@ -21,7 +21,7 @@ $nextElementSize: 1.5rem
 .elementLogo
   width: 100%
   display: grid
-  grid-template-columns: repeat(4, 1fr)
+  //grid-template-columns: repeat(4, 1fr)
   justify-content: center
   align-items: center
   gap: 2rem
@@ -49,6 +49,9 @@ $nextElementSize: 1.5rem
   height: 10rem
   margin: 2rem auto
   overflow: scroll
+  display: flex
+  justify-content: center
+  align-items: start
 
 
   & > p
@@ -58,6 +61,8 @@ $nextElementSize: 1.5rem
     text-align: justify
     padding: 0 2rem
     margin: 0 auto
+    display: flex
+    justify-content: center
 
 
 
