--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <app-integration-component />
-<app-navigation />
+
 <app-header />
-<app-about-us />
-<app-photo />
-<app-specialties />
-<app-trust-us />
+<router-outlet> </router-outlet>
 <app-footer />
