--- a/src/styles.sass
+++ b/src/styles.sass
@@ -84,3 +84,11 @@ body::before
   text-align: center
 
 
+.LogoFora
+  mask-image: url("/image/logoFora.svg")
+  mask-repeat: no-repeat
+  mask-size: contain
+  width: 13rem
+  height: 5rem
+  background-color: $secondColor
+  margin: 0 auto
