create footer section and routing, build 404 page not fuound and styling this page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-integration-component />
-
 <app-header />
-<router-outlet> </router-outlet>
+<div class="pagesWrapper">
+  <router-outlet> </router-outlet>
+</div>
 <app-footer />
