--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,7 +8,9 @@
     <div
       (click)="goToMainpage()"
       [style.cursor]="'pointer'"
-      class="LogoFora"
+      [style.height]="'7rem'"
+      [style.width]="'30rem'"
+      class="LogoFora logoColor"
     ></div>
     <div class="coppyWrapper">
       <p class="coppy">
@@ -16,7 +18,7 @@
       </p>
       <div class="createdWrapper">
         <p>create by</p>
-        <a href="https:/www.wp.pl" target="_blank">rabdev.pl</a>
+        <a href="https://www.wp.pl" target="_blank">rabdev.pl</a>
       </div>
     </div>
   </div>
