--- a/src/app/components/footer/footer.component.sass
+++ b/src/app/components/footer/footer.component.sass
@@ -33,7 +33,7 @@
   align-items: center
 
   & > p
-    font-size: 1.4rem
+    font-size: 1rem
     text-transform: uppercase
     font-weight: 100
     letter-spacing: 2px
@@ -41,7 +41,7 @@
 
   & > a
     color: white
-    font-size: 1.8rem
+    font-size: 2rem
     text-decoration: none
 
 
@@ -53,7 +53,7 @@
 
 
   & > a
-    font-size: 2rem
+    font-size: 1.6rem
     color: $textColor
     text-decoration: none
     font-weight: 200
@@ -62,3 +62,8 @@
 
     &:hover
       color: $secondColor
+
+
+.logoColor
+  background-color: $mainColor
+  margin: 1rem auto
