--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="wrapperHeader">
-  <a class="logo" href="/public">
+  <a class="logo" href="/">
     <i class="icon-ForaLogo"></i>
   </a>
   <div class="slider">
