--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,8 @@
-<h1>404 not found</h1>
+<div class="notFoundWrapper">
+  <span class="errorNumber">404</span>
+  <p>Strona nie znaleziona</p>
+  <div class="notFoundContact">
+    <p (click)="comeBackToHome()">wróć na stronę główną</p>
+    <p>skontaktuj sie z administratorem</p>
+  </div>
+</div>
