--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,3 +1,7 @@
+@import "variables"
+
+$marginPage: 4rem
+
 .wrapperElements
   display: flex
   justify-content: center
@@ -10,3 +14,7 @@
 p
   padding: 10rem
   margin: 30rem 0
+
+
+.pagesWrapper
+  margin: $marginPage auto
