--- a/src/styles.sass
+++ b/src/styles.sass
@@ -88,6 +88,7 @@ body::before
   mask-image: url("/image/logoFora.svg")
   mask-repeat: no-repeat
   mask-size: contain
+  mask-position: center
   width: 13rem
   height: 5rem
   background-color: $secondColor
