create media from header and create navigation mobile

--- a/src/app/components/navigation/navigation.component.sass
+++ b/src/app/components/navigation/navigation.component.sass
@@ -22,6 +22,11 @@
   padding: 0 2rem
   box-shadow: 0 0 2rem 1rem $mainColor-dark
 
+  @media(max-width: $bp-md-plas)
+    display: none
+
+
+
 
 .navUp
   font-size: 3rem
@@ -63,3 +68,5 @@
 
     & .activeURL
       background-color: $mainColor
+
+
