--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -27,3 +27,14 @@ $marginSection: 8rem
 //scale
 $scaleBackground: 4
 $scaleContent: $scaleBackground / ($scaleBackground * $scaleBackground)
+
+
+//RWD BrakePoint
+
+$bp-xs: 425px
+$bp-sm: 576px
+$bp-md: 768px
+$bp-md-plas: 840px
+$bp-lg: 992px
+$bp-xl: 1200px
+$bp-xxl: 1400px
