--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -34,6 +34,12 @@ $opacitySlider: .7
   justify-content: center
   align-items: center
 
+  @media(max-width: $bp-lg)
+    transform: skewY(0deg)
+    border-radius: 0
+    height: 90vh
+    margin: 2rem 0
+
   &__text
     transform: skewY(5deg)
     text-transform: uppercase
@@ -41,9 +47,18 @@ $opacitySlider: .7
     & > h3
       font-size: 4rem
 
+      @media(max-width: $bp-sm)
+        font-size: 3rem
+
     & > p
       font-size: 2.3rem
       font-weight: 100
+
+      @media(max-width: $bp-sm)
+        font-size: 1.8rem
+
+    @media(max-width: $bp-lg)
+      transform: skewY(0deg)
 
 
 
