--- a/src/app/components/integration-component/integration-component.component.sass
+++ b/src/app/components/integration-component/integration-component.component.sass
@@ -10,10 +10,15 @@ $sizeContact: 4.5rem
   border: none
   position: fixed
   top: 2rem
+  left: 2rem
   box-shadow: 0 0 1rem 1rem $mainColor-dark
   cursor: pointer
   transition: all .2s ease-in-out
   z-index: 1000
+
+  @media (max-width: $bp-md-plas)
+    display: none
+
 
   & > i
     font-size: calc($sizeContact - 2rem)
@@ -32,6 +37,9 @@ $sizeContact: 4.5rem
   right: 2rem
   display: flex
   z-index: 1000
+
+  @media (max-width: $bp-md-plas)
+    display: none
 
 
 .socialItem
