--- a/src/styles.sass
+++ b/src/styles.sass
@@ -32,7 +32,7 @@ body::before
   opacity: .2
   z-index: -1
 
-  @media(max-width: 1000px)
+  @media(max-width: $bp-lg)
     background-image: none
 
 
@@ -50,6 +50,9 @@ body::before
 .wrapperElements
   grid-column: 2 / -2
 
+  @media(max-width: $bp-lg)
+    grid-column: 1 / -1
+
 
 .buttonElement
   display: flex
@@ -66,6 +69,11 @@ body::before
   color: $mainColor
   box-shadow: 0 0 1rem 1rem $mainColor-dark
   transition: all .2s ease-in-out
+
+  @media(max-width: $bp-sm)
+    width: 6em
+    height: 3rem
+    font-size: 1.5rem
 
   &:hover
     transform: scale(1.1)
